--- a/Conclusion/ref.bib
+++ b/Conclusion/ref.bib
@@ -490,3 +490,402 @@ author = {Christof Beierle and Claude Carlet and Gregor Leander and Léo Perrin}
 keywords = {APN permutations, Infinite family, CCZ-equivalence, EA-equivalence, Boolean functions},
 abstract = {Recently, Beierle and Leander found two new sporadic quadratic APN permutations in dimension 9. Up to EA-equivalence, we present a single trivariate representation of those two permutations as Cu:(F2m)3→(F2m)3,(x,y,z)↦(x3+uy2z,y3+uxz2,z3+ux2y), where m=3 and u∈F23∖{0,1} such that the two permutations correspond to different choices of u. We then analyze the differential uniformity and the nonlinearity of Cu in a more general case. For m≥3 being a multiple of 3 and u∈F2m not being a 7-th power, we show that the differential uniformity of Cu is bounded above by 8, and that the linearity of Cu is bounded above by 81+⌊m2⌋. Based on numerical experiments, we conjecture that Cu is not APN if m is greater than 3. We also analyze the CCZ-equivalence classes of the quadratic APN permutations in dimension 9 known so far and derive a lower bound on the number of their EA-equivalence classes. We further show that the two sporadic APN permutations share an interesting similarity with Gold APN permutations in odd dimension divisible by 3, namely that a permutation EA-inequivalent to those sporadic APN permutations and their inverses can be obtained by just applying EA transformations and inversion to the original permutations.}
 }
+
+@InProceedings{IwataK1999highorderbentfunction,
+author="Iwata, Tetsu
+and Kurosawa, Kaoru",
+editor="Lam, Kwok-Yan
+and Okamoto, Eiji
+and Xing, Chaoping",
+title="Probabilistic Higher Order Differential Attack and Higher Order Bent Functions",
+booktitle="Advances in Cryptology - ASIACRYPT'99",
+year="1999",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="62--74",
+abstract="We first show that a Feistel type block cipher is broken if the round function is approximated by a low degree vectorial Boolean function. The proposed attack is a generalization of the higher order differential attack to a probabilistic one. We next introduce a notion of higher order bent functions in order to prevent our attack. We then show their explicit constructions.",
+isbn="978-3-540-48000-6"
+}
+
+@article{SunW2009NL_2,
+title = {The lower bounds on the second order nonlinearity of three classes of Boolean functions with high nonlinearity},
+journal = {Information Sciences},
+volume = {179},
+number = {3},
+pages = {267-278},
+year = {2009},
+issn = {0020-0255},
+doi = {https://doi.org/10.1016/j.ins.2008.10.002},
+url = {https://www.sciencedirect.com/science/article/pii/S0020025508004179},
+author = {Guanghong Sun and Chuankun Wu},
+keywords = {Boolean function, Cryptography, Nonlinearity, Derivation, Walsh coefficient, Reed–Muller code},
+abstract = {The rth order nonlinearity of Boolean functions is an important cryptographic criterion associated with some attacks on stream and block ciphers. It is also very useful in coding theory, since it is related to the covering radii of Reed–Muller codes. This paper tightens the lower bounds of the second order nonlinearity of three classes of Boolean functions in the form f(x)=tr(xd) in n variables, where (1) d=2m+1+3 and n=2m, or (2) d=2m+2m+12+1, n=2m and m is odd, or (3) d=22r+2r+1+1 and n=4r.}
+}
+
+@article{SarkarG2009NL_2MM,
+  title={On the second order nonlinearity of a cubic Maiorana-Mcfarland bent function},
+  author={Sarkar, Sumanta and Gangopadhyay, S},
+  journal={Finite Fields and their Applications},
+  volume={2009},
+  year={2009},
+  publisher={Citeseer}
+}
+
+@article{GangopadhyayST2010NL_2,
+title = {On the lower bounds of the second order nonlinearities of some Boolean functions},
+journal = {Information Sciences},
+volume = {180},
+number = {2},
+pages = {266-273},
+year = {2010},
+issn = {0020-0255},
+doi = {https://doi.org/10.1016/j.ins.2009.09.006},
+url = {https://www.sciencedirect.com/science/article/pii/S0020025509003892},
+author = {Sugata Gangopadhyay and Sumanta Sarkar and Ruchi Telang},
+keywords = {Boolean functions, Derivative, Second order nonlinearity},
+abstract = {The rth order nonlinearity of a Boolean function is an important cryptographic criterion in analyzing the security of stream as well as block ciphers. It is also important in coding theory as it is related to the covering radius of the Reed–Muller code R(r,n). In this paper we deduce the lower bounds of the second order nonlinearities of the following two types of Boolean functions: 1.fλ(x)=Tr1n(λxd) with d=22r+2r+1 and λ∈F2n∗, where n=6r.2.f(x,y)=Tr1t(xy2i+1), where x,y∈F2t,n=2t,n⩾6 and i is an integer such that 1⩽i<t,gcd(2t-1,2i+1)=1. For some λ, the functions of the first type are bent functions, whereas Boolean functions of the second type are all bent functions, i.e., they possess the maximum first order nonlinearity. It is demonstrated that in some cases our bounds are better than the previously obtained bounds.}
+}
+
+@article{GodeG2010NL_3Kasami,
+  author    = {Ruchi Gode and
+               Sugata Gangopadhyay},
+  title     = {Third-order nonlinearities of a subclass of Kasami functions},
+  journal   = {Cryptogr. Commun.},
+  volume    = {2},
+  number    = {1},
+  pages     = {69--83},
+  year      = {2010},
+  url       = {https://doi.org/10.1007/s12095-009-0017-z},
+  doi       = {10.1007/s12095-009-0017-z},
+  timestamp = {Sat, 25 Apr 2020 14:00:49 +0200},
+  biburl    = {https://dblp.org/rec/journals/ccds/GodeG10.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{SunW2011NL_2,
+  author    = {Guanghong Sun and
+               Chuankun Wu},
+  title     = {The lower bound on the second-order nonlinearity of a class of Boolean
+               functions with high nonlinearity},
+  journal   = {Appl. Algebra Eng. Commun. Comput.},
+  volume    = {22},
+  number    = {1},
+  pages     = {37--45},
+  year      = {2011},
+  url       = {https://doi.org/10.1007/s00200-010-0136-y},
+  doi       = {10.1007/s00200-010-0136-y},
+  timestamp = {Thu, 18 May 2017 09:50:53 +0200},
+  biburl    = {https://dblp.org/rec/journals/aaecc/SunW11.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Singh2011NL_2,
+  title={Second-order nonlinearities of some classes of cubic Boolean functions based on secondary constructions},
+  author={Singh, Deep},
+  journal={Int'l J. Comput. Sci. Inform. Technol},
+  volume={2},
+  number={2},
+  pages={786--791},
+  year={2011},
+  publisher={Citeseer}
+}
+
+@article{LiHG11BNL_2,
+  author    = {Xuelian Li and
+               Yupu Hu and
+               Juntao Gao},
+  title     = {Lower Bounds on the Second Order nonlinearity of Boolean Functions},
+  journal   = {Int. J. Found. Comput. Sci.},
+  volume    = {22},
+  number    = {6},
+  pages     = {1331--1349},
+  year      = {2011},
+  url       = {https://doi.org/10.1142/S012905411100874X},
+  doi       = {10.1142/S012905411100874X},
+  timestamp = {Sat, 27 May 2017 14:23:38 +0200},
+  biburl    = {https://dblp.org/rec/journals/ijfcs/LiHG11.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Carlet2011NL_Profile_Dillon,
+  author    = {Claude Carlet},
+  title     = {More Vectorial Boolean Functions with Unbounded nonlinearity Profile},
+  journal   = {Int. J. Found. Comput. Sci.},
+  volume    = {22},
+  number    = {6},
+  pages     = {1259--1269},
+  year      = {2011},
+  url       = {https://doi.org/10.1142/S0129054111008696},
+  doi       = {10.1142/S0129054111008696},
+  timestamp = {Sat, 27 May 2017 14:23:38 +0200},
+  biburl    = {https://dblp.org/rec/journals/ijfcs/Carlet11.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{GargK2012NLr_Kasami,
+  author    = {Manish Garg and
+               Andrey Khalyavin},
+  title     = {Higher-order nonlinearity of Kasami functions},
+  journal   = {Int. J. Comput. Math.},
+  volume    = {89},
+  number    = {10},
+  pages     = {1311--1318},
+  year      = {2012},
+  url       = {https://doi.org/10.1080/00207160.2012.687725},
+  doi       = {10.1080/00207160.2012.687725},
+  timestamp = {Thu, 23 Jun 2022 20:05:13 +0200},
+  biburl    = {https://dblp.org/rec/journals/ijcm/GargK12.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{TangCT2013NL_2bent,
+  title = {On the second-order nonlinearities of some bent functions},
+  journal = {Information Sciences},
+  volume = {223},
+  pages = {322-330},
+  year = {2013},
+  issn = {0020-0255},
+  doi = {https://doi.org/10.1016/j.ins.2012.08.024},
+  url = {https://www.sciencedirect.com/science/article/pii/S0020025512005774},
+  author = {Deng Tang and Claude Carlet and Xiaohu Tang},
+  keywords = {Boolean functions, Covering radius, Bent functions, Second-order nonlinearity},
+  abstract = {The rth-order nonlinearity of Boolean functions plays a central role against several known attacks on stream and block ciphers. It plays also an important role in coding theory, since its maximum equals the covering radius of the rth-order Reed–Muller code. But it is difficult to calculate and even to bound. In this paper, we show lower bounds on the second-order nonlinearity of two subclasses of well-known bent functions. We first improve a known lower bound on the second-order nonlinearity of the simplest partial spread bent functions, whose nonlinearity profile has been bounded by the second author. This improvement allows obtaining a better bound for the whole profile. We subsequently give a lower bound on the second-order nonlinearity of some infinite class of Maiorana–McFarland (M–M) bent functions, which generalizes a result by Gangopadhyay et al.}
+}
+
+@article{Singh2014NL_3_biquadratic,
+  title={On third-order nonlinearity of biquadratic monomial boolean functions},
+  author={Singh, Brajesh Kumar},
+  journal={Int. J. Eng. Math.},
+  volume={2014},
+  pages={1--7},
+  year={2014}
+}
+
+@article{SunW2015NLr_Niho,
+  author    = {Guanghong Sun and
+               Chuankun Wu},
+  title     = {Higher Order Nonlinearity of Niho Functions},
+  journal   = {Fundam. Informaticae},
+  volume    = {137},
+  number    = {3},
+  pages     = {403--412},
+  year      = {2015},
+  url       = {https://doi.org/10.3233/FI-2015-1187},
+  doi       = {10.3233/FI-2015-1187},
+  timestamp = {Fri, 18 Sep 2020 11:16:30 +0200},
+  biburl    = {https://dblp.org/rec/journals/fuin/SunW15.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{WangT2016NL_2,
+  author    = {Qichun Wang and
+               Chik How Tan},
+  title     = {On the second-order nonlinearity of the hidden weighted bit function},
+  journal   = {Discret. Appl. Math.},
+  volume    = {215},
+  pages     = {197--202},
+  year      = {2016},
+  url       = {https://doi.org/10.1016/j.dam.2016.06.020},
+  doi       = {10.1016/j.dam.2016.06.020},
+  timestamp = {Thu, 11 Feb 2021 23:20:46 +0100},
+  biburl    = {https://dblp.org/rec/journals/dam/WangT16a.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{SinghP2017NL_2_4,
+  title={Higher order nonlinearity of some cryptographic functions},
+  author={Singh, Deep and Paul, Amit},
+  journal={International Journal of Computational and Applied Mathematics},
+  volume={12},
+  number={2},
+  pages={195--205},
+  year={2017}
+}
+
+@inproceedings{GaoT2017NL_2_MM,
+  author    = {Qi Gao and
+               Deng Tang},
+  title     = {A lower bound on the second-order nonlinearity of the class of Maiorana-McFarland
+               bent functions},
+  booktitle = {Eighth International Workshop on Signal Design and Its Applications
+               in Communications, {IWSDA} 2017, Sapporo, Japan, September 24-28,
+               2017},
+  pages     = {191--195},
+  publisher = {{IEEE}},
+  year      = {2017},
+  url       = {https://doi.org/10.1109/IWSDA.2017.8097084},
+  doi       = {10.1109/IWSDA.2017.8097084},
+  timestamp = {Wed, 16 Oct 2019 14:14:55 +0200},
+  biburl    = {https://dblp.org/rec/conf/iwsda/GaoT17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{MesnagerKJ2020NL_2cubic,
+  author    = {Sihem Mesnager and
+               Kwang Ho Kim and
+               Myong Song Jo},
+  title     = {On the number of the rational zeros of linearized polynomials and
+               the second-order nonlinearity of cubic Boolean functions},
+  journal   = {Cryptogr. Commun.},
+  volume    = {12},
+  number    = {4},
+  pages     = {659--674},
+  year      = {2020},
+  url       = {https://doi.org/10.1007/s12095-019-00410-5},
+  doi       = {10.1007/s12095-019-00410-5},
+  timestamp = {Thu, 06 Aug 2020 21:48:30 +0200},
+  biburl    = {https://dblp.org/rec/journals/ccds/MesnagerKJ20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@article{SinghPKSV2022res_NL_profile,
+  title={Resiliency and Nonlinearity Profiles of Some Cryptographic Functions},
+  author={Singh, Deep and Paul, Amit and Kumar, Neerendra and Stoffov{\'a}, Veronika and Verma, Chaman},
+  journal={Mathematics},
+  volume={10},
+  number={23},
+  pages={4473},
+  year={2022},
+  publisher={MDPI}
+}
+
+@article{TangMM2022inversefunction,
+  title = {Further cryptographic properties of the multiplicative inverse function},
+  journal = {Discrete Applied Mathematics},
+  volume = {307},
+  pages = {191-211},
+  year = {2022},
+  issn = {0166-218X},
+  doi = {https://doi.org/10.1016/j.dam.2021.10.020},
+  url = {https://www.sciencedirect.com/science/article/pii/S0166218X21004492},
+  author = {Deng Tang and Bimal Mandal and Subhamoy Maitra},
+  keywords = {Block cipher, Boolean function, Differential uniformity, Gowers uniformity norm, Nonlinearity, S-box},
+  abstract = {Differential analysis is an important cryptanalytic technique on block ciphers. In one form, this measures the probability of occurrence of the differences between certain input vectors and the corresponding output vectors. For this analysis, the constituent S-boxes of a block cipher need to be studied carefully. In this direction, we derive further cryptographic properties of the multiplicative inverse function, especially the ones related to higher order differentials. This improves some theoretical results of Boukerrou et al. [ToSC 2020(1)]. Further, we prove that the multiplicative inverse function defined over F2n has an error (bias) in its second order differential spectrum with probability 12n−2, and that error occurs in more than one place. Next, we analyze the Gowers uniformity norm of S-boxes, which is also a measure connected to higher order approximations. Finally, the bounds related to the nonlinearity profile of the multiplicative inverse function are derived using both Gowers U3 norm and Walsh–Hadamard spectrum. Some of our findings here provide slightly improved bounds over the work of Carlet [IEEE-IT, 2008]. These theoretical insights might have implications towards non-randomness of a block cipher, where the multiplicative inverse function is used as a primitive.}
+}
+
+@article{YanT2020NL_2,
+title = {Improving lower bounds on the second-order nonlinearity of three classes of Boolean functions},
+journal = {Discrete Mathematics},
+volume = {343},
+number = {5},
+pages = {111698},
+year = {2020},
+issn = {0012-365X},
+doi = {https://doi.org/10.1016/j.disc.2019.111698},
+url = {https://www.sciencedirect.com/science/article/pii/S0012365X19303760},
+author = {Haode Yan and Deng Tang},
+keywords = {Boolean function, Reed–Muller code, Covering radius, Second-order nonlinearity, Walsh transform},
+abstract = {Boolean functions used in symmetric-key cryptosystems must have high second-order nonlinearity to withstand several known attacks and some potential attacks which may exist but are not yet efficient and might be improved in the future. The second-order nonlinearity of Boolean functions also plays an important role in coding theory, since the maximal second-order nonlinearity of all Boolean functions in n variables equals the covering radius of the Reed–Muller code with length 2n and order r. It is well-known that providing a tight lower bound on the second-order nonlinearity of a general Boolean function with high algebraic degree is a hard task, excepting a few special classes of Boolean functions. In this paper, we improve the lower bounds on the second-order nonlinearity of three classes of Boolean functions of the form fi(x)=Tr1n(xdi) in n variables for i=1,2 and 3, where Tr1n denotes the absolute trace mapping from F2n to F2 and di’s are of the form (1) d1=2m+1+3 and n=2m, (2) d2=2m+2m+12+1, n=2m with odd m, and (3) d3=22r+2r+1+1 and n=4r with even r.}
+}
+
+@article{DobbertinLCCFG2006bent_Niho,
+title = {Construction of bent functions via Niho power functions},
+journal = {Journal of Combinatorial Theory, Series A},
+volume = {113},
+number = {5},
+pages = {779-798},
+year = {2006},
+issn = {0097-3165},
+doi = {https://doi.org/10.1016/j.jcta.2005.07.009},
+url = {https://www.sciencedirect.com/science/article/pii/S0097316505001342},
+author = {Hans Dobbertin and Gregor Leander and Anne Canteaut and Claude Carlet and Patrick Felke and Philippe Gaborit},
+keywords = {Boolean function, Bent function, Niho exponent},
+abstract = {A Boolean function with an even number n=2k of variables is called bent if it is maximally nonlinear. We present here a new construction of bent functions. Boolean functions of the form f(x)=tr(α1xd1+α2xd2), α1,α2,x∈F2n, are considered, where the exponents di (i=1,2) are of Niho type, i.e. the restriction of xdi on F2k is linear. We prove for several pairs of (d1,d2) that f is a bent function, when α1 and α2 fulfill certain conditions. To derive these results we develop a new method to prove that certain rational mappings on F2n are bijective.}
+}
+
+@article{GodeG2009NL_2_cubicmonomial,
+  title={On second order nonlinearities of cubic monomial Boolean functions},
+  author={Gode, Ruchi and Gangopadhyay, Sugata},
+  journal={Cryptology ePrint Archive},
+  year={2009}
+}
+
+@article{SainiG2022NL_r_Niho,
+  author    = {Kezia Saini and
+               Manish Garg},
+  title     = {On the higher-order nonlinearity of a Boolean bent function class
+               (Constructed via Niho power functions)},
+  journal   = {Cryptogr. Commun.},
+  volume    = {14},
+  number    = {5},
+  pages     = {1055--1066},
+  year      = {2022},
+  url       = {https://doi.org/10.1007/s12095-022-00574-7},
+  doi       = {10.1007/s12095-022-00574-7},
+  timestamp = {Sat, 10 Sep 2022 21:00:06 +0200},
+  biburl    = {https://dblp.org/rec/journals/ccds/SainiG22.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{TangYZZ2020NL_2bent,
+  author    = {Deng Tang and
+               Haode Yan and
+               Zhengchun Zhou and
+               Xiaosong Zhang},
+  title     = {A new lower bound on the second-order nonlinearity of a class of monomial
+               bent functions},
+  journal   = {Cryptogr. Commun.},
+  volume    = {12},
+  number    = {1},
+  pages     = {77--83},
+  year      = {2020},
+  url       = {https://doi.org/10.1007/s12095-019-00360-y},
+  doi       = {10.1007/s12095-019-00360-y},
+  timestamp = {Thu, 11 Aug 2022 15:50:45 +0200},
+  biburl    = {https://dblp.org/rec/journals/ccds/TangYZZ20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@articleInfo{Liu2023NL_2,
+  title = {The lower bounds on the second-order nonlinearity of three classes of Boolean functions},
+  journal = {Advances in Mathematics of Communications},
+  volume = {17},number = {2},pages = {418-430},
+  year = {2023},
+  issn = {1930-5346},
+  doi = {10.3934/amc.2020136},
+  url = {/article/id/a2617a0a-2bcc-4da3-86be-cc57e41188ae},
+  author = {Qian Liu},
+  keywords = {Boolean function, cryptography, cubic function, second-order nonlinearity, Walsh transform}
+}
+
+@InProceedings{GodeFM2022NL_2cubic,
+  author="Gode, Ruchi Telang
+  and Faruqi, Shahab
+  and Mishra, Ashutosh",
+  editor="Sahni, Manoj
+  and Merig{\'o}, Jos{\'e} M.
+  and Sahni, Ritu
+  and Verma, Rajkumar",
+  title="Improved Lower Bounds on Second Order Non-linearities of Cubic Boolean Functions",
+  booktitle="Mathematical Modeling, Computational Intelligence Techniques and Renewable Energy",
+  year="2022",
+  publisher="Springer Singapore",
+  address="Singapore",
+  pages="31--43",
+  abstract="Gode, Ruchi TelangFaruqi, ShahabMishra, AshutoshNonlinearity of 2nd order is important in the study of Boolean functions from a cryptographic viewpoint. This property is useful in choosing efficient Boolean functions resisting quadratic approximation attacks. We obtain improved lower bounds with respect to the nonlinearities of 2nd order of some classes of degree 3 monomial Boolean functions of type {\$}{\$}g(x)=Tr( x^{\{}2^i+2^j+1{\}}){\$}{\$}g(x)=Tr(x2i+2j+1)(here {\$}{\$}i,j{\backslash}in {\backslash}mathbb {\{}N{\}}{\$}{\$}i,j∈N) and {\$}{\$}i {\backslash}le {\backslash}lceil {\backslash}frac{\{}n{\}}{\{}2{\}} {\backslash}rceil {\$}{\$}i≤⌈n2⌉, {\$}{\$} j {\backslash}le i{\$}{\$}j≤i. We were able to obtain these bounds in an efficacious way for Boolean functions upto 13 variables. Obtained results refine the bounds obtained by Gode and Gangopadhyay [10] and Mesnager et al. [21]. This shows the efficiency of these classes of functions with respect to nonlinearity of 2nd order.",
+  isbn="978-981-16-5952-2"
+}
+
+@article{Serre1982serrebound,
+  ISSN = {09895558},
+  URL = {http://www.jstor.org/stable/44166412},
+  author = {Jean-Pierre SERRE},
+  journal = {Séminaire de Théorie des Nombres de Bordeaux},
+  pages = {1--8},
+  publisher = {Société Arithmétique de Bordeaux},
+  title = {NOMBRES DE POINTS DES COURBES ALGÉBRIQUES SUR F
+            q},
+  urldate = {2023-02-20},
+  year = {1982}
+}
+
+@book{Stichtenoth2008book_algebraicfunctionfieldsandcodes,
+  author = {Stichtenoth, Henning},
+  title = {Algebraic Function Fields and Codes},
+  year = {2008},
+  isbn = {3540768777},
+  publisher = {Springer Publishing Company, Incorporated},
+  edition = {2nd},
+  abstract = {The theory of algebraic function fields has its origins in number theory, complex analysis (compact Riemann surfaces), and algebraic geometry. Since about 1980, function fields have found surprising applications in other branches of mathematics such as coding theory, cryptography, sphere packings and others. The main objective of this book is to provide a purely algebraic, self-contained and in-depth exposition of the theory of function fields. This new edition, published in the series Graduate Texts in Mathematics, has been considerably expanded. Moreover, the present edition contains numerous exercises. Some of them are fairly easy and help the reader to understand the basic material. Other exercises are more advanced and cover additional material which could not be included in the text. This volume is mainly addressed to graduate students in mathematics and theoretical computer science, cryptography, coding theory and electrical engineering.}
+}
